Được tạo bằng Colaboratory

--- a/BTVN.ipynb
+++ b/BTVN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BTVN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDxcNiLJVI9QByNnmLmTVN",
+      "authorship_tag": "ABX9TyPl9/mZwRAAneeJCrfF2aqS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Chương 2"
+        "#Chương 2"
       ],
       "metadata": {
         "id": "3EpgLKDsv7hn"
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Bài tập 1"
+        "**Bài tập 1**"
       ],
       "metadata": {
         "id": "cBteCg4Xwk_8"
@@ -131,7 +131,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Bài tập 2"
+        "**Bài tập 2**"
       ],
       "metadata": {
         "id": "kg5ZIXIMnfsh"
@@ -146,12 +146,12 @@
         "Derivative(st,x).doit()"
       ],
       "metadata": {
-        "id": "9k7wl2dAnhr7",
-        "outputId": "ac57ba22-1799-4512-b5fd-38f98381f68e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "9k7wl2dAnhr7",
+        "outputId": "ac57ba22-1799-4512-b5fd-38f98381f68e"
       },
       "execution_count": 2,
       "outputs": [
@@ -177,12 +177,12 @@
         "Derivative(st,x).doit()"
       ],
       "metadata": {
-        "id": "k8x7DvhOnuqz",
-        "outputId": "71f6c88b-14cf-47b4-e8e6-12741e2dc99a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "k8x7DvhOnuqz",
+        "outputId": "71f6c88b-14cf-47b4-e8e6-12741e2dc99a"
       },
       "execution_count": 3,
       "outputs": [
@@ -208,12 +208,12 @@
         "Derivative(st,x).doit()"
       ],
       "metadata": {
-        "id": "a9Izbew0pAS_",
-        "outputId": "d5e8232c-0a6b-4421-bfa8-bcfbeec1a809",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "a9Izbew0pAS_",
+        "outputId": "d5e8232c-0a6b-4421-bfa8-bcfbeec1a809"
       },
       "execution_count": 5,
       "outputs": [
@@ -239,12 +239,12 @@
         "Derivative(st,x).doit()"
       ],
       "metadata": {
-        "id": "31UHfHPUpAOB",
-        "outputId": "1decfccc-7f21-49e0-f249-1d4d16bd7b20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 61
-        }
+        },
+        "id": "31UHfHPUpAOB",
+        "outputId": "1decfccc-7f21-49e0-f249-1d4d16bd7b20"
       },
       "execution_count": 6,
       "outputs": [
@@ -270,12 +270,12 @@
         "Derivative(st,x).doit()"
       ],
       "metadata": {
-        "id": "mwWV2CANpALQ",
-        "outputId": "e820d9f3-0210-40ce-9116-3037f1be02ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "id": "mwWV2CANpALQ",
+        "outputId": "e820d9f3-0210-40ce-9116-3037f1be02ce"
       },
       "execution_count": 7,
       "outputs": [
@@ -301,12 +301,12 @@
         "Derivative(st,x).doit()"
       ],
       "metadata": {
-        "id": "ntX_IBkWpAFM",
-        "outputId": "65f16bb1-c236-4b25-96d7-b931ee484d03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "id": "ntX_IBkWpAFM",
+        "outputId": "65f16bb1-c236-4b25-96d7-b931ee484d03"
       },
       "execution_count": 10,
       "outputs": [
@@ -333,12 +333,12 @@
         "Derivative(f,x).doit()"
       ],
       "metadata": {
-        "id": "Te43Xjzwpm2d",
-        "outputId": "3d55401e-4648-46cf-d300-e76369469463",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "Te43Xjzwpm2d",
+        "outputId": "3d55401e-4648-46cf-d300-e76369469463"
       },
       "execution_count": 8,
       "outputs": [
@@ -364,12 +364,12 @@
         "Derivative(st,x).doit()"
       ],
       "metadata": {
-        "id": "sv8wdNLppmnR",
-        "outputId": "51678fb8-2ef7-4662-d3ce-a642cc6641ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 59
-        }
+        },
+        "id": "sv8wdNLppmnR",
+        "outputId": "51678fb8-2ef7-4662-d3ce-a642cc6641ea"
       },
       "execution_count": 11,
       "outputs": [
@@ -395,12 +395,12 @@
         "Derivative(st,x).doit()"
       ],
       "metadata": {
-        "id": "YPExyr3rpmiL",
-        "outputId": "9b589b0c-79a8-4840-95ba-d46475011f61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 42
-        }
+        },
+        "id": "YPExyr3rpmiL",
+        "outputId": "9b589b0c-79a8-4840-95ba-d46475011f61"
       },
       "execution_count": 12,
       "outputs": [
@@ -426,12 +426,12 @@
         "Derivative(st,x).doit()"
       ],
       "metadata": {
-        "id": "uOWpigOfo_1V",
-        "outputId": "c24c46cf-896b-47df-e0fb-bd95e749cdc7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 39
-        }
+        },
+        "id": "uOWpigOfo_1V",
+        "outputId": "c24c46cf-896b-47df-e0fb-bd95e749cdc7"
       },
       "execution_count": 13,
       "outputs": [
@@ -451,10 +451,64 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Chương 3"
+        "#Chương 3"
       ],
       "metadata": {
         "id": "wKQIjsFyxBhI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Bài tập 1**"
+      ],
+      "metadata": {
+        "id": "K7qFO0ostrOf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from matplotlib import pyplot as plt\n",
+        "import math\n",
+        "\n",
+        "def draw_graph(x,y):\n",
+        "  plt.plot(x,y)\n",
+        "  plt.xlabel('Trục x')\n",
+        "  plt.ylabel('Trục y')\n",
+        "  plt.title('Đồ thị ném vật thể')"
+      ],
+      "metadata": {
+        "id": "c5itUej6xI9X"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Chương 4"
+      ],
+      "metadata": {
+        "id": "0byZDiUQv8Bz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Bài tập 1**"
+      ],
+      "metadata": {
+        "id": "Iq1N9RBJv_gt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "3jlyjBeAwC4r"
       }
     },
     {
@@ -463,7 +517,7 @@
         ""
       ],
       "metadata": {
-        "id": "c5itUej6xI9X"
+        "id": "hR7EniGr0Yw9"
       },
       "execution_count": null,
       "outputs": []
