Được tạo bằng Colaboratory

--- a/BTVN.ipynb
+++ b/BTVN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BTVN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPl9/mZwRAAneeJCrfF2aqS",
+      "authorship_tag": "ABX9TyMzkFPyO0wA6b/X25I1qKsP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,7 +153,7 @@
         "id": "9k7wl2dAnhr7",
         "outputId": "ac57ba22-1799-4512-b5fd-38f98381f68e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +184,7 @@
         "id": "k8x7DvhOnuqz",
         "outputId": "71f6c88b-14cf-47b4-e8e6-12741e2dc99a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,7 +215,7 @@
         "id": "a9Izbew0pAS_",
         "outputId": "d5e8232c-0a6b-4421-bfa8-bcfbeec1a809"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -246,7 +246,7 @@
         "id": "31UHfHPUpAOB",
         "outputId": "1decfccc-7f21-49e0-f249-1d4d16bd7b20"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +277,7 @@
         "id": "mwWV2CANpALQ",
         "outputId": "e820d9f3-0210-40ce-9116-3037f1be02ce"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +308,7 @@
         "id": "ntX_IBkWpAFM",
         "outputId": "65f16bb1-c236-4b25-96d7-b931ee484d03"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
         "id": "Te43Xjzwpm2d",
         "outputId": "3d55401e-4648-46cf-d300-e76369469463"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
         "id": "sv8wdNLppmnR",
         "outputId": "51678fb8-2ef7-4662-d3ce-a642cc6641ea"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,7 +402,7 @@
         "id": "YPExyr3rpmiL",
         "outputId": "9b589b0c-79a8-4840-95ba-d46475011f61"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +433,7 @@
         "id": "uOWpigOfo_1V",
         "outputId": "c24c46cf-896b-47df-e0fb-bd95e749cdc7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,12 +476,51 @@
         "  plt.plot(x,y)\n",
         "  plt.xlabel('Trục x')\n",
         "  plt.ylabel('Trục y')\n",
-        "  plt.title('Đồ thị ném vật thể')"
+        "  plt.title('Đồ thị ném vật thể')\n",
+        "\n",
+        "def frange(batdau, ketthuc, buocnhay):\n",
+        "  numbers = []\n",
+        "  while batdau < ketthuc:\n",
+        "    numbers.append(batdau)\n",
+        "    batdau += buocnhay\n",
+        "  return numbers"
       ],
       "metadata": {
         "id": "c5itUej6xI9X"
       },
-      "execution_count": 15,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def draw_trajectory(u, theta):\n",
+        "  g = 9.8\n",
+        "  theta = math.radians(theta)\n",
+        "  t_flight = 2*u*math.sin(theta)/g\n",
+        "  intervals = frange(0, t_flight, 0.001)\n",
+        "  x = []\n",
+        "  y = []\n",
+        "  for t in intervals:\n",
+        "    x.append(u*math.cos(theta)*t)\n",
+        "    y.append(u*math.sin(theta)*t - 0.5*g*t*t)\n",
+        "  draw_graph(x, y)"
+      ],
+      "metadata": {
+        "id": "Ckm0Wkr5kBnr"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "AMfO98WTkVnO"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
