Được tạo bằng Colaboratory

--- a/Chương_7.ipynb
+++ b/Chương_7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOLBet//N4Fq1snClBaNvuk",
+      "authorship_tag": "ABX9TyOH96w768eoSf2SWJQfOzWE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 37
+          "height": 35
         },
         "id": "b2027Ou0fwRl",
         "outputId": "8eb8040d-83e6-4c0e-e843-74dd456f838d"
@@ -89,7 +89,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 37
+          "height": 35
         },
         "id": "cF_n1GeRgGOy",
         "outputId": "eb5678b2-7a8c-4360-97dc-7a9d6a611941"
@@ -130,7 +130,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 51
         },
         "id": "yTNthfR6gUWz",
         "outputId": "c57a139b-ee8e-4bf1-f453-da8998b3f7ea"
@@ -171,7 +171,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 38
+          "height": 36
         },
         "id": "hwxTiOmmgdOi",
         "outputId": "e4121006-14e9-41ca-b40d-7e02faf3b541"
@@ -252,6 +252,67 @@
       },
       "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OusIDufImlfX",
+        "outputId": "bacfb60c-c39f-44dc-e863-f46584836973"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "F"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mbMu2eodmofn",
+        "outputId": "49d8e4d3-5d3a-4b65-e15b-ae795b1804b8"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.5496323529411775"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Nft0V0aHmqMw"
+      }
     }
   ]
 }
