Được tạo bằng Colaboratory

--- a/BTVN.ipynb
+++ b/BTVN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BTVN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5ypcTwaH3jEVNXwbaVy8Z",
+      "authorship_tag": "ABX9TyMAc9YLwuoplDsq1vY62a+l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -532,9 +532,9 @@
           "height": 344
         },
         "id": "AMfO98WTkVnO",
-        "outputId": "0ba1fa21-9f08-4764-e867-40b985f12f9a"
+        "outputId": "e2a26dc6-5f97-4a09-f956-efae1a773d87"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "name": "stdout",
@@ -600,7 +600,51 @@
         "**Bài tập 1**"
       ],
       "metadata": {
+        "id": "b6a3cadNqdXo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hiện một biểu thức toán học f(x), giới hạn của tích phân x1, x2. \n",
+        "\n",
+        "Sử dụng sympy.integrate(y, x) để kiểm tra xem nó có giải pháp phân tích/tượng trưng hay không, nếu có thì trả về kết quả bằng cách sử dụng sympy.integrate(y, (x,x1,x2).evalf()). Nếu nó không có giải pháp phân tích sympy thì nó sử dụng scipy.integrate.quad hoặc các hàm số khác để tính tích phân. \n",
+        "\n",
+        "Với phương pháp này, nó có thể sẽ nhanh hơn và chính xác hơn vì phần lớn các biểu thức toán học đang làm đều có tích phân giải tích."
+      ],
+      "metadata": {
+        "id": "hocpEUvorifx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Bài tập 2**"
+      ],
+      "metadata": {
         "id": "Iq1N9RBJv_gt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Trong logic toán học và khoa học máy tính, phép tính lambda (tiếng Anh:lambda calculus) hay còn được viết là λ-calculus, là một hệ thống hình thức dùng trong việc định nghĩa hàm số, ứng dụng hàm số và đệ quy. Phép tính lambda được Alonzo Church đề xuất vào những năm 193x như là một phần của một nghiên cứu về các nền tảng toán học. Hệ thống nguyên thủy đã được chứng minh là xung khắc logic vào năm 1935 khi Stephen Kleene và J. B. Rosser phát triển nghịch lý Kleene–Rosser. Phép tính lambda sau đó đã được phát triển để trở thành một công cụ quan trọng trong việc nghiên cứu các vấn đề lý thuyết tính toán và lý thuyết đệ quy, và hình thành nên nền tảng cơ bản của mô hình lập trình hàm.\n",
+        "\n",
+        "Trong phép tính lambda, các hàm là thực thể lớp nhất được truyền vào như các tham số, và trả lại kết quả. Bởi vậy các biểu thức lambda là một dạng của khái niệm thủ tục không có tên mà không tạo ra hiệu ứng phụ. Giải tích hàm có thể được hiểu như là một ngôn ngữ lập trình lý tưởng và vô cùng nhỏ gọn. Nó có khả năng biểu diễn bất kỳ giải thuật nào, và nó tạo ra mô hình lập trình hàm. Các chương trình được tạo thành từ các hàm không có trạng thái và chỉ đơn giản nhận vào dữ liệu và trả lại đầu ra, không tạo ra các hiệu ứng phụ làm thay đổi dữ liệu đầu ra. Các ngôn ngữ lập trình hàm hiện đại, xây dựng dựa trên phép tính lambda gồm có Erlang, Haskell, Lisp, ML, và Scheme, Python, cũng như là các ngôn ngữ gần đây như Clojure, F#, Nemerle, và Scala.\n",
+        "\n",
+        "Phép tính lambda tiếp tục đóng vai trò quan trọng trong các nghiên cứu cơ bản về toán học, thể hiện trong các thư từ trao đổi của Curry-Howard. Tuy nhiên, phép tính lambda bất định kiểu không tránh khỏi các nghịch lý về lý thuyết tập hợp (xem Nghịch lý Kleene-Rosser)."
+      ],
+      "metadata": {
+        "id": "3jlyjBeAwC4r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Chương 5"
+      ],
+      "metadata": {
+        "id": "p2kC2dp4tbXw"
       }
     },
     {
@@ -609,19 +653,8 @@
         ""
       ],
       "metadata": {
-        "id": "3jlyjBeAwC4r"
+        "id": "gcpPDHf2teqg"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "hR7EniGr0Yw9"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
