Được tạo bằng Colaboratory

--- a/BTVN.ipynb
+++ b/BTVN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BTVN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMAc9YLwuoplDsq1vY62a+l",
+      "authorship_tag": "ABX9TyNRmlublW9QqZEqRyqreMjI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -650,11 +650,130 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Thực hành 10"
       ],
       "metadata": {
         "id": "gcpPDHf2teqg"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative, solve\n",
+        "x = Symbol('x')\n",
+        "a = Symbol('a')\n",
+        "A = -2*x**3 + 2*a*x\n",
+        "d1 = Derivative(A,x).doit()\n",
+        "d1"
+      ],
+      "metadata": {
+        "id": "rF5uI7-1vEbJ",
+        "outputId": "cfd6891c-8a72-44dd-849d-9749b20b73ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2*a - 6*x**2"
+            ],
+            "text/latex": "$\\displaystyle 2 a - 6 x^{2}$"
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cuctri = solve(d1,x)\n",
+        "cuctri"
+      ],
+      "metadata": {
+        "id": "eIvo2Eq9wH2r",
+        "outputId": "5f0cd1b5-8bee-4ecf-f361-4af452170f13",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-sqrt(3)*sqrt(a)/3, sqrt(3)*sqrt(a)/3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "B = cuctri\n",
+        "d2 = Derivative(d1, x).doit()\n",
+        "d2.subs({x:B}).evalf()"
+      ],
+      "metadata": {
+        "id": "opTF6AfVwMY1",
+        "outputId": "691b6dfd-3666-4e2c-8fec-1bef36bc67f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-12.0*x"
+            ],
+            "text/latex": "$\\displaystyle - 12.0 x$"
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_min = 0\n",
+        "A.subs({x:x_min}).evalf()"
+      ],
+      "metadata": {
+        "id": "aswEvMnXwOv_",
+        "outputId": "2c48aa61-fb6f-47f3-c49a-1afe9677d727",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ],
+            "text/latex": "$\\displaystyle 0$"
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     }
   ]
 }
