Được tạo bằng Colaboratory

--- a/BTVN.ipynb
+++ b/BTVN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BTVN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNRmlublW9QqZEqRyqreMjI",
+      "authorship_tag": "ABX9TyPm26CVF7Ao9ghe34w6pz3y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -667,12 +667,12 @@
         "d1"
       ],
       "metadata": {
-        "id": "rF5uI7-1vEbJ",
-        "outputId": "cfd6891c-8a72-44dd-849d-9749b20b73ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "rF5uI7-1vEbJ",
+        "outputId": "cfd6891c-8a72-44dd-849d-9749b20b73ad"
       },
       "execution_count": 5,
       "outputs": [
@@ -696,11 +696,11 @@
         "cuctri"
       ],
       "metadata": {
-        "id": "eIvo2Eq9wH2r",
-        "outputId": "5f0cd1b5-8bee-4ecf-f361-4af452170f13",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eIvo2Eq9wH2r",
+        "outputId": "5f0cd1b5-8bee-4ecf-f361-4af452170f13"
       },
       "execution_count": 6,
       "outputs": [
@@ -724,12 +724,12 @@
         "d2.subs({x:B}).evalf()"
       ],
       "metadata": {
-        "id": "opTF6AfVwMY1",
-        "outputId": "691b6dfd-3666-4e2c-8fec-1bef36bc67f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "opTF6AfVwMY1",
+        "outputId": "691b6dfd-3666-4e2c-8fec-1bef36bc67f5"
       },
       "execution_count": 7,
       "outputs": [
@@ -753,12 +753,12 @@
         "A.subs({x:x_min}).evalf()"
       ],
       "metadata": {
-        "id": "aswEvMnXwOv_",
-        "outputId": "2c48aa61-fb6f-47f3-c49a-1afe9677d727",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "aswEvMnXwOv_",
+        "outputId": "2c48aa61-fb6f-47f3-c49a-1afe9677d727"
       },
       "execution_count": 9,
       "outputs": [
@@ -772,6 +772,346 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 11"
+      ],
+      "metadata": {
+        "id": "5vhbYlMExPxH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Derivative, solve, Symbol\n",
+        "x = Symbol('x')\n",
+        "n = 5000 + 1000 * ( (1500 - x) /  100)\n",
+        "P = n*x - 2000000 - 500*n\n",
+        "Q = P.subs({n:x}).evalf()\n",
+        "Q"
+      ],
+      "metadata": {
+        "id": "e0s0CM4axRTm",
+        "outputId": "35426bf7-1abb-45ee-e4aa-129389df2b84",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x**2 + 5000.0*x - 12000000.0"
+            ],
+            "text/latex": "$\\displaystyle x^{2} + 5000.0 x - 12000000.0$"
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d1 = Derivative(Q, x).doit()\n",
+        "d1"
+      ],
+      "metadata": {
+        "id": "78CEHLxMySa3",
+        "outputId": "f8911af5-55e9-48f6-ebb8-67e23bb6edc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2*x + 5000.0"
+            ],
+            "text/latex": "$\\displaystyle 2 x + 5000.0$"
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cuctri = solve(d1)\n",
+        "cuctri"
+      ],
+      "metadata": {
+        "id": "8nkE59yTyZtl",
+        "outputId": "885756ed-3341-4010-de29-f75e5ce48566",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-2500.00000000000]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cuctri[0]"
+      ],
+      "metadata": {
+        "id": "kkGHN6VxyfoX",
+        "outputId": "bfc22267-2446-48a7-db4f-ceb5e6df885c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-2500.00000000000"
+            ],
+            "text/latex": "$\\displaystyle -2500.0$"
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f = -10*x**2 + 25000*x - 12000000\n",
+        "d3 = Derivative(f,x).doit()\n",
+        "d3"
+      ],
+      "metadata": {
+        "id": "M8Lb4-VTyh2a",
+        "outputId": "6f220ca2-d95b-4c3f-deaa-5eb43010b86d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25000 - 20*x"
+            ],
+            "text/latex": "$\\displaystyle 25000 - 20 x$"
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = solve(d3)\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "DfCT0hX2ykUo",
+        "outputId": "ab14efb4-b33d-4383-c685-3de4ebd28316",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1250]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d4 = Derivative(d3,x).doit()\n",
+        "d4"
+      ],
+      "metadata": {
+        "id": "rr5NnS5Aymak",
+        "outputId": "d4471d2d-011f-4fac-e837-7da55e75ddfe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-20"
+            ],
+            "text/latex": "$\\displaystyle -20$"
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f.subs({x:0}).evalf()"
+      ],
+      "metadata": {
+        "id": "CCvHw_UUzKrJ",
+        "outputId": "93f54037-701d-4820-de94-b243cad13c4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-12000000.0000000"
+            ],
+            "text/latex": "$\\displaystyle -12000000.0$"
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f.subs({x:1250}).evalf()"
+      ],
+      "metadata": {
+        "id": "g85QPAn5zNrl",
+        "outputId": "2fa5572e-a175-4944-e1ca-3ce10f4414ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3625000.00000000"
+            ],
+            "text/latex": "$\\displaystyle 3625000.0$"
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f.subs({x:1500}).evalf()"
+      ],
+      "metadata": {
+        "id": "JQUq9Q82zQLs",
+        "outputId": "4ad59486-e240-411c-fd6f-7a17a7d3c030",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3000000.00000000"
+            ],
+            "text/latex": "$\\displaystyle 3000000.0$"
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 12"
+      ],
+      "metadata": {
+        "id": "SivNLMptyog6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Integral, exp\n",
+        "t = Symbol(\"t\")\n",
+        "F = 62 + 8*t\n",
+        "m = 70\n",
+        "a = m*exp(-0.017*t)\n",
+        "b = F*exp(-0.017*t)\n",
+        "pf = Integral(a, (t, 0, 1)).doit() + Integral(b, (t, 1, 8)).doit()\n",
+        "pf"
+      ],
+      "metadata": {
+        "id": "fG0daqf7zVlj",
+        "outputId": "ba9c3c64-c5e8-4da4-fdac-27ebe5646f8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "701.659163940087"
+            ],
+            "text/latex": "$\\displaystyle 701.659163940087$"
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     }
