Được tạo bằng Colaboratory

--- a/BTVN.ipynb
+++ b/BTVN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BTVN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPm26CVF7Ao9ghe34w6pz3y",
+      "authorship_tag": "ABX9TyPR4D0hpOFCFse8ksvgx+wG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -795,12 +795,12 @@
         "Q"
       ],
       "metadata": {
-        "id": "e0s0CM4axRTm",
-        "outputId": "35426bf7-1abb-45ee-e4aa-129389df2b84",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "e0s0CM4axRTm",
+        "outputId": "35426bf7-1abb-45ee-e4aa-129389df2b84"
       },
       "execution_count": 10,
       "outputs": [
@@ -824,12 +824,12 @@
         "d1"
       ],
       "metadata": {
-        "id": "78CEHLxMySa3",
-        "outputId": "f8911af5-55e9-48f6-ebb8-67e23bb6edc4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "78CEHLxMySa3",
+        "outputId": "f8911af5-55e9-48f6-ebb8-67e23bb6edc4"
       },
       "execution_count": 11,
       "outputs": [
@@ -853,11 +853,11 @@
         "cuctri"
       ],
       "metadata": {
-        "id": "8nkE59yTyZtl",
-        "outputId": "885756ed-3341-4010-de29-f75e5ce48566",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8nkE59yTyZtl",
+        "outputId": "885756ed-3341-4010-de29-f75e5ce48566"
       },
       "execution_count": 12,
       "outputs": [
@@ -879,12 +879,12 @@
         "cuctri[0]"
       ],
       "metadata": {
-        "id": "kkGHN6VxyfoX",
-        "outputId": "bfc22267-2446-48a7-db4f-ceb5e6df885c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "kkGHN6VxyfoX",
+        "outputId": "bfc22267-2446-48a7-db4f-ceb5e6df885c"
       },
       "execution_count": 13,
       "outputs": [
@@ -909,12 +909,12 @@
         "d3"
       ],
       "metadata": {
-        "id": "M8Lb4-VTyh2a",
-        "outputId": "6f220ca2-d95b-4c3f-deaa-5eb43010b86d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "M8Lb4-VTyh2a",
+        "outputId": "6f220ca2-d95b-4c3f-deaa-5eb43010b86d"
       },
       "execution_count": 14,
       "outputs": [
@@ -938,11 +938,11 @@
         "A"
       ],
       "metadata": {
-        "id": "DfCT0hX2ykUo",
-        "outputId": "ab14efb4-b33d-4383-c685-3de4ebd28316",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DfCT0hX2ykUo",
+        "outputId": "ab14efb4-b33d-4383-c685-3de4ebd28316"
       },
       "execution_count": 15,
       "outputs": [
@@ -965,12 +965,12 @@
         "d4"
       ],
       "metadata": {
-        "id": "rr5NnS5Aymak",
-        "outputId": "d4471d2d-011f-4fac-e837-7da55e75ddfe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "rr5NnS5Aymak",
+        "outputId": "d4471d2d-011f-4fac-e837-7da55e75ddfe"
       },
       "execution_count": 16,
       "outputs": [
@@ -993,12 +993,12 @@
         "f.subs({x:0}).evalf()"
       ],
       "metadata": {
-        "id": "CCvHw_UUzKrJ",
-        "outputId": "93f54037-701d-4820-de94-b243cad13c4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "CCvHw_UUzKrJ",
+        "outputId": "93f54037-701d-4820-de94-b243cad13c4d"
       },
       "execution_count": 17,
       "outputs": [
@@ -1021,12 +1021,12 @@
         "f.subs({x:1250}).evalf()"
       ],
       "metadata": {
-        "id": "g85QPAn5zNrl",
-        "outputId": "2fa5572e-a175-4944-e1ca-3ce10f4414ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "g85QPAn5zNrl",
+        "outputId": "2fa5572e-a175-4944-e1ca-3ce10f4414ac"
       },
       "execution_count": 18,
       "outputs": [
@@ -1049,12 +1049,12 @@
         "f.subs({x:1500}).evalf()"
       ],
       "metadata": {
-        "id": "JQUq9Q82zQLs",
-        "outputId": "4ad59486-e240-411c-fd6f-7a17a7d3c030",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "JQUq9Q82zQLs",
+        "outputId": "4ad59486-e240-411c-fd6f-7a17a7d3c030"
       },
       "execution_count": 19,
       "outputs": [
@@ -1074,7 +1074,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Thực hành 12"
+        "Thực hành 13"
       ],
       "metadata": {
         "id": "SivNLMptyog6"
@@ -1089,18 +1089,18 @@
         "m = 70\n",
         "a = m*exp(-0.017*t)\n",
         "b = F*exp(-0.017*t)\n",
-        "pf = Integral(a, (t, 0, 1)).doit() + Integral(b, (t, 1, 8)).doit()\n",
+        "pf = Integral(a,(t,0,1)).doit() + Integral(b,(t, 1, 8)).doit()\n",
         "pf"
       ],
       "metadata": {
-        "id": "fG0daqf7zVlj",
-        "outputId": "ba9c3c64-c5e8-4da4-fdac-27ebe5646f8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "fG0daqf7zVlj",
+        "outputId": "d348d3bd-9b73-419b-8d49-2e9cfbd6e250"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1111,7 +1111,7 @@
             "text/latex": "$\\displaystyle 701.659163940087$"
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 21
         }
       ]
     }
